--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,11 @@
 ---
-
+import { siteConfig } from "../config/site";
 ---
 
 <header class="header">
   <div class="container header-content">
     <a href="/" class="logo">
-      News<span class="highlight">Flow</span>
+      <span class="highlight">{siteConfig.name}</span>
     </a>
     <nav class="nav">
       <ul class="nav-list">
