--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,9 @@ import { siteConfig } from "../config/site";
         <ul>
           <li><a href="/about">About</a></li>
           <li><a href="/contact">Contact</a></li>
-          <li><a href="/privacy">Privacy</a></li>
+          <li><a href="/disclaimer">Disclaimer</a></li>
+          <li><a href="/privacy">Privacy Policy</a></li>
+          <li><a href="/terms">Terms & Conditions</a></li>
         </ul>
       </div>
     </div>
