--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -17,6 +17,10 @@ const formattedDate = entry.data.publishDate.toLocaleDateString('en-US', {
   month: 'long',
   day: 'numeric',
 });
+
+import {resolveNewsImage} from '/src/lib/resolveNewsImage.ts';
+import { Image } from 'astro:assets';
+const img = resolveNewsImage(entry.data.image);
 ---
 
 <Layout title={entry.data.title}>
@@ -30,7 +34,7 @@ const formattedDate = entry.data.publishDate.toLocaleDateString('en-US', {
         <h1 class="title">{entry.data.title}</h1>
       </div>
       <div class="hero-image-container">
-        <img src={entry.data.image} alt={entry.data.title} />
+        <Image src={img} alt={entry.data.title} />
       </div>
     </header>
 
