--- a/src/pages/disclaimer/index.astro
+++ b/src/pages/disclaimer/index.astro
@@ -5,8 +5,10 @@ import {Content} from './disclaimer.md'
 
 ---
 
-<Layout title="privacy-policy">
-    <div class="prose">
+<Layout title="disclaimer">
+   <div class="flex justify-center">
+     <div class=" prose">
         <Content/>
     </div>
+   </div>
 </Layout>
