--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const featuredArticle = sortedNews.find(article => article.data.featured) || sor
     category={featuredArticle.data.category}
   />
 
-  <div class="container">
+  <div class="">
     <h2 class="section-title">Latest News</h2>
     <div class="news-grid">
       {sortedNews.map(article => (
