--- a/src/pages/privacy-policy/index.astro
+++ b/src/pages/privacy-policy/index.astro
@@ -1,12 +1,14 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import {Content} from './terms.md'
+import {Content} from './privacy-policy.md'
 
 
 ---
 
 <Layout title="privacy-policy">
-    <div class="prose">
+   <div class="flex justify-center">
+     <div class=" prose">
         <Content/>
     </div>
+   </div>
 </Layout>
