--- a/src/pages/tos/index.astro
+++ b/src/pages/tos/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from "../../layouts/Layout.astro";
-import {Content} from './about.md'
+import {Content} from './tos.md'
 
 
 ---
 
-<Layout title="about">
+<Layout title="tos">
    <div class="flex justify-center">
      <div class=" prose">
         <Content/>
