rearranged the utility pages for better visibility

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import {Content} from './disclaimer.md'
+import Layout from "../layouts/Layout.astro";
+import {Content} from '../content/pages/about.md'
 
 
 ---
 
-<Layout title="disclaimer">
+<Layout title="about">
    <div class="flex justify-center">
      <div class=" prose">
         <Content/>
