--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import {Content} from './about.md'
+import Layout from "../layouts/Layout.astro";
+import {Content} from '../content/pages/contact.md'
 
 
 ---
