--- a/src/pages/tos.astro
+++ b/src/pages/tos.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import {Content} from './tos.md'
+import Layout from "../layouts/Layout.astro";
+import {Content} from '../content/pages/tos.md'
 
 
 ---
 
-<Layout title="tos">
+<Layout title="about">
    <div class="flex justify-center">
      <div class=" prose">
         <Content/>
