updated website logo

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,6 @@
 import { siteConfig } from "../config/site";
 ---
 
-<header class="h-12">
-  <a class="font-bold text-3xl hover:text-blue-600" href="/">{siteConfig.name}</a>
+<header class=" h-12 flex">
+  <a class="" href="/"><img class="h-full" src="/logo.png" alt="trickytube-logo"></a>
 </header>
